# DroneModule

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  tests.yml
configs/: crazyflie.yaml  generic_quad_250mm.yaml
docs/: architecture.md  firmware-architecture.md  getting-started.md  index.md  tuning.md
docs/api/: controller.md  drone.md  forces.md  integrators.md  lee_controller.md  loader.md  mixer.md  pid.md  rate_profiles.md
docs/config/: yaml-format.md
docs/examples/: isaaclab.md
drone/: __init__.py  integrators.py  model.py
drone/config/: loader.py
drone/controllers/: __init__.py  cascade_pid.py  crazyflie_pid.py  lee_controller.py  pid.py
drone/forces/: __init__.py  base.py  drag.py  gravity.py
drone/tuning/: __init__.py  pole_placement.py
drone/utils/: __init__.py  rate_profiles.py
drone_control/: __init__.py
drone_control/config/: __init__.py  loader.py
drone_control/controllers/: __init__.py  cascade.py  crazyflie_pid.py  lee_controller.py  math_utils.py  mixer.py  pid.py  rate_profiles.py
drone_control/tuning/: pole_placement.py
site/: 404.html  index.html  sitemap.xml
site/api/controller/: index.html
site/api/loader/: index.html
site/architecture/: index.html
site/firmware-architecture/: index.html
site/getting-started/: index.html
site/search/: search_index.json
site/tuning/: index.html
tests/: conftest.py  test_cascade_pid.py  test_config.py  test_controllers.py  test_crazyflie_pid.py  test_lee_controller.py  test_pid.py  test_rate_profiles.py  test_tuning.py  test_visual.py
(+5 files in other folders)
